--- a/deadlines.html
+++ b/deadlines.html
@@ -7,13 +7,15 @@
     :root {
       --accent: #ef4444;
       --accent-hover: #dc2626;
-      --bg: #f4f4ff;
+      --bg: #f8f9fc;
       --card: #ffffff;
-      --muted: #6b7280;
+      --muted: #64748b;
+      --text-primary: #0f172a;
+      --text-secondary: #475569;
       --success: #10b981;
       --warning: #f59e0b;
+      --border: #e2e8f0;
     }
-
 
     * {
       margin: 0;
@@ -21,30 +23,27 @@
       box-sizing: border-box;
     }
 
-
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', sans-serif;
       background: var(--bg);
       min-height: 100vh;
+      color: var(--text-primary);
     }
-
 
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 30px 20px;
+      padding: 40px 20px;
     }
-
 
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 30px;
+      margin-bottom: 32px;
       flex-wrap: wrap;
       gap: 15px;
     }
-
 
     .header-left {
       display: flex;
@@ -52,46 +51,44 @@
       gap: 15px;
     }
 
-
     .back-btn {
       background: white;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       padding: 10px 15px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.938rem;
       transition: all 0.2s;
       text-decoration: none;
-      color: #374151;
+      color: var(--text-primary);
       display: inline-flex;
       align-items: center;
       gap: 5px;
+      font-weight: 500;
     }
-
 
     .back-btn:hover {
-      background: #f9fafb;
-      border-color: #d1d5db;
+      background: #f1f5f9;
+      border-color: #cbd5e1;
     }
 
-
     h1 {
-      font-size: 2rem;
-      color: #1f2937;
+      font-size: 1.5rem;
+      color: var(--text-primary);
       display: flex;
       align-items: center;
       gap: 10px;
+      font-weight: 600;
     }
-
 
     .add-btn {
       background: linear-gradient(135deg, var(--accent), var(--accent-hover));
       color: white;
       border: none;
-      padding: 12px 24px;
+      padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 0.875rem;
       font-weight: 600;
       transition: transform 0.2s, box-shadow 0.2s;
       display: flex;
@@ -99,25 +96,23 @@
       gap: 8px;
     }
 
-
     .add-btn:hover {
       transform: translateY(-2px);
       box-shadow: 0 4px 12px rgba(239, 68, 68, 0.3);
     }
 
-
     .filter-section {
       background: white;
       padding: 20px;
-      border-radius: 12px;
-      margin-bottom: 25px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      border-radius: 16px;
+      margin-bottom: 24px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       display: flex;
       gap: 15px;
       flex-wrap: wrap;
       align-items: center;
     }
-
 
     .filter-group {
       display: flex;
@@ -125,69 +120,61 @@
       gap: 8px;
     }
 
-
     .filter-group label {
-      font-size: 0.9rem;
-      color: var(--muted);
+      font-size: 0.875rem;
+      color: var(--text-secondary);
       font-weight: 500;
     }
 
-
     .filter-select {
       padding: 8px 12px;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       border-radius: 6px;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       cursor: pointer;
       background: white;
+      color: var(--text-primary);
     }
-
 
     .deadlines-grid {
       display: grid;
       gap: 20px;
     }
 
-
     .deadline-card {
       background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      border-radius: 16px;
+      padding: 24px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       border-left: 4px solid var(--accent);
       transition: transform 0.2s, box-shadow 0.2s;
       position: relative;
     }
-
 
     .deadline-card:hover {
       transform: translateY(-2px);
       box-shadow: 0 4px 16px rgba(0,0,0,0.1);
     }
 
-
     .deadline-card.overdue {
       border-left-color: #dc2626;
       background: #fef2f2;
     }
-
 
     .deadline-card.today {
       border-left-color: var(--warning);
       background: #fffbeb;
     }
 
-
     .deadline-card.upcoming {
       border-left-color: var(--success);
     }
-
 
     .deadline-card.completed {
       opacity: 0.7;
       border-left-color: #9ca3af;
     }
-
 
     .deadline-header {
       display: flex;
@@ -197,37 +184,32 @@
       gap: 15px;
     }
 
-
     .deadline-title {
-      font-size: 1.2rem;
+      font-size: 1.125rem;
       font-weight: 600;
-      color: #1f2937;
+      color: var(--text-primary);
       flex: 1;
     }
-
 
     .deadline-actions {
       display: flex;
       gap: 8px;
     }
 
-
     .icon-btn {
       background: transparent;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       padding: 6px 10px;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       transition: all 0.2s;
     }
 
-
     .icon-btn:hover {
-      background: #f9fafb;
-      border-color: #d1d5db;
+      background: #f1f5f9;
+      border-color: #cbd5e1;
     }
-
 
     .icon-btn.delete:hover {
       background: #fef2f2;
@@ -235,106 +217,92 @@
       color: #dc2626;
     }
 
-
     .deadline-meta {
       display: flex;
       flex-wrap: wrap;
       gap: 15px;
       margin-bottom: 12px;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
     }
-
 
     .meta-item {
       display: flex;
       align-items: center;
       gap: 5px;
-      color: var(--muted);
+      color: var(--text-secondary);
     }
-
 
     .priority-badge {
       padding: 4px 10px;
       border-radius: 12px;
-      font-size: 0.85rem;
+      font-size: 0.813rem;
       font-weight: 600;
     }
-
 
     .priority-high {
       background: #fee2e2;
       color: #991b1b;
     }
 
-
     .priority-medium {
       background: #fef3c7;
       color: #92400e;
     }
-
 
     .priority-low {
       background: #dbeafe;
       color: #1e40af;
     }
 
-
     .status-badge {
       padding: 4px 10px;
       border-radius: 12px;
-      font-size: 0.85rem;
+      font-size: 0.813rem;
       font-weight: 600;
     }
-
 
     .status-pending {
       background: #fef3c7;
       color: #92400e;
     }
 
-
     .status-completed {
       background: #d1fae5;
       color: #065f46;
     }
 
-
     .deadline-description {
-      color: #4b5563;
+      color: var(--text-secondary);
       line-height: 1.6;
       margin-top: 10px;
       word-wrap: break-word;
       word-break: break-word;
       overflow-wrap: break-word;
+      font-size: 0.875rem;
     }
-
-
 
     .days-left {
       font-weight: 600;
       padding: 6px 12px;
       border-radius: 8px;
       display: inline-block;
+      font-size: 0.813rem;
     }
-
 
     .days-left.overdue {
       background: #fee2e2;
       color: #991b1b;
     }
 
-
     .days-left.today {
       background: #fef3c7;
       color: #92400e;
     }
 
-
     .days-left.upcoming {
       background: #d1fae5;
       color: #065f46;
     }
-
 
     .modal {
       display: none;
@@ -349,11 +317,9 @@
       z-index: 1000;
     }
 
-
     .modal.active {
       display: flex;
     }
-
 
     .modal-content {
       background: white;
@@ -365,7 +331,6 @@
       overflow-y: auto;
     }
 
-
     .modal-header {
       display: flex;
       justify-content: space-between;
@@ -373,12 +338,11 @@
       margin-bottom: 20px;
     }
 
-
     .modal-header h2 {
-      font-size: 1.5rem;
-      color: #1f2937;
+      font-size: 1.25rem;
+      color: var(--text-primary);
+      font-weight: 600;
     }
-
 
     .close-btn {
       background: none;
@@ -391,37 +355,34 @@
       height: 30px;
     }
 
-
     .form-group {
       margin-bottom: 20px;
     }
-
 
     .form-group label {
       display: block;
       margin-bottom: 8px;
       font-weight: 600;
-      color: #374151;
+      color: var(--text-primary);
+      font-size: 0.875rem;
     }
-
 
     .form-group input,
     .form-group textarea,
     .form-group select {
       width: 100%;
       padding: 10px 12px;
-      border: 1px solid #d1d5db;
+      border: 1px solid var(--border);
       border-radius: 8px;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-family: inherit;
+      color: var(--text-primary);
     }
-
 
     .form-group textarea {
       resize: vertical;
       min-height: 100px;
     }
-
 
     .form-actions {
       display: flex;
@@ -430,16 +391,16 @@
       margin-top: 25px;
     }
 
-
     .btn-cancel {
       background: white;
-      border: 1px solid #d1d5db;
+      border: 1px solid var(--border);
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
+      font-weight: 500;
+      color: var(--text-primary);
     }
-
 
     .btn-save {
       background: linear-gradient(135deg, var(--accent), var(--accent-hover));
@@ -448,30 +409,32 @@
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-weight: 600;
     }
-
 
     .empty-state {
       text-align: center;
       padding: 60px 20px;
-      color: var(--muted);
+      color: var(--text-secondary);
     }
-
 
     .empty-state-icon {
       font-size: 4rem;
       margin-bottom: 15px;
     }
 
-
     .empty-state h3 {
-      font-size: 1.3rem;
+      font-size: 1.125rem;
       margin-bottom: 10px;
-      color: #4b5563;
+      color: var(--text-primary);
+      font-weight: 600;
     }
 
+    .empty-state p {
+      font-size: 0.875rem;
+      color: var(--text-secondary);
+    }
 
     @media (max-width: 768px) {
       .header {
@@ -479,20 +442,25 @@
         align-items: flex-start;
       }
 
-
       .filter-section {
         flex-direction: column;
         align-items: stretch;
       }
 
-
       .deadline-header {
         flex-direction: column;
       }
 
-
       .deadline-actions {
         align-self: flex-end;
+      }
+
+      .container {
+        padding: 24px 20px;
+      }
+
+      h1 {
+        font-size: 1.25rem;
       }
     }
   </style>
@@ -508,7 +476,6 @@
         + Add Deadline
       </button>
     </div>
-
 
     <div class="filter-section">
       <div class="filter-group">
@@ -530,7 +497,6 @@
       </div>
     </div>
 
-
     <div class="deadlines-grid" id="deadlinesGrid">
       <div class="empty-state">
         <div class="empty-state-icon">⏰</div>
@@ -539,7 +505,6 @@
       </div>
     </div>
   </div>
-
 
   <!-- Add/Edit Modal -->
   <div class="modal" id="deadlineModal">
@@ -584,35 +549,29 @@
     </div>
   </div>
 
-
   <script>
     const API_BASE = window.location.origin;
     let allDeadlines = [];
     let editingId = null;
 
-
     function getCurrentUser() {
       return sessionStorage.getItem('userEmail');
     }
 
-
     function isUserLoggedIn() {
       return sessionStorage.getItem('isLoggedIn') === 'true';
     }
-
 
     if (!isUserLoggedIn()) {
       alert('Please log in to access this page');
       window.location.href = '/';
     }
 
-
     const userEmail = getCurrentUser();
     if (!userEmail) {
       alert('Please log in to access this page');
       window.location.href = '/';
     }
-
 
     async function loadDeadlines() {
       try {
@@ -626,7 +585,6 @@
       }
     }
 
-
     function getDaysLeft(dueDate) {
       const today = new Date();
       today.setHours(0, 0, 0, 0);
@@ -636,7 +594,6 @@
       return diff;
     }
 
-
     function getDeadlineClass(dueDate, status) {
       if (status === 'completed') return 'completed';
       const daysLeft = getDaysLeft(dueDate);
@@ -644,7 +601,6 @@
       if (daysLeft === 0) return 'today';
       return 'upcoming';
     }
-
 
     function getDaysLeftText(dueDate, status) {
       if (status === 'completed') return 'Completed';
@@ -654,7 +610,6 @@
       if (daysLeft === 1) return '1 day left';
       return `${daysLeft} days left`;
     }
-
 
     function renderDeadlines(deadlines) {
       const grid = document.getElementById('deadlinesGrid');
@@ -670,14 +625,12 @@
         return;
       }
 
-
       // Sort by due date (nearest first)
       const sorted = [...deadlines].sort((a, b) => {
         if (a.status === 'completed' && b.status !== 'completed') return 1;
         if (a.status !== 'completed' && b.status === 'completed') return -1;
         return new Date(a.due_date) - new Date(b.due_date);
       });
-
 
       grid.innerHTML = sorted.map(deadline => {
         const deadlineClass = getDeadlineClass(deadline.due_date, deadline.status);
@@ -687,7 +640,6 @@
           day: 'numeric', 
           year: 'numeric' 
         });
-
 
         return `
           <div class="deadline-card ${deadlineClass}">
@@ -710,28 +662,22 @@
       }).join('');
     }
 
-
     function applyFilters() {
       const statusFilter = document.getElementById('statusFilter').value;
       const priorityFilter = document.getElementById('priorityFilter').value;
 
-
       let filtered = allDeadlines;
-
 
       if (statusFilter !== 'all') {
         filtered = filtered.filter(d => d.status === statusFilter);
       }
 
-
       if (priorityFilter !== 'all') {
         filtered = filtered.filter(d => d.priority === priorityFilter);
       }
 
-
       renderDeadlines(filtered);
     }
-
 
     function openAddModal() {
       editingId = null;
@@ -740,11 +686,9 @@
       document.getElementById('deadlineModal').classList.add('active');
     }
 
-
     function editDeadline(id) {
       const deadline = allDeadlines.find(d => d.id === id);
       if (!deadline) return;
-
 
       editingId = id;
       document.getElementById('modalTitle').textContent = 'Edit Deadline';
@@ -756,17 +700,14 @@
       document.getElementById('deadlineModal').classList.add('active');
     }
 
-
     function closeModal() {
       document.getElementById('deadlineModal').classList.remove('active');
       document.getElementById('deadlineForm').reset();
       editingId = null;
     }
 
-
     async function saveDeadline(event) {
       event.preventDefault();
-
 
       const data = {
         user_email: userEmail,
@@ -776,7 +717,6 @@
         status: document.getElementById('statusInput').value,
         description: document.getElementById('descriptionInput').value.trim()
       };
-
 
       try {
         if (editingId) {
@@ -793,7 +733,6 @@
           });
         }
 
-
         closeModal();
         loadDeadlines();
       } catch (error) {
@@ -802,10 +741,8 @@
       }
     }
 
-
     async function deleteDeadline(id) {
       if (!confirm('Are you sure you want to delete this deadline?')) return;
-
 
       try {
         await fetch(`${API_BASE}/deadlines/${id}`, {
@@ -818,7 +755,6 @@
       }
     }
 
-
     // Close modal on outside click
     document.getElementById('deadlineModal').addEventListener('click', (e) => {
       if (e.target.id === 'deadlineModal') {
@@ -826,13 +762,8 @@
       }
     });
 
-
     // Load deadlines on page load
     loadDeadlines();
   </script>
 </body>
 </html>
-
-
-
-
