--- a/career.html
+++ b/career.html
@@ -5,13 +5,16 @@
   <title>Career & Goals - Project Management</title>
   <style>
     :root {
-      --accent: #8b5cf6;
-      --accent-hover: #7c3aed;
-      --bg: #f4f4ff;
+      --accent: #6366f1;
+      --accent-hover: #4f46e5;
+      --bg: #f8f9fc;
       --card: #ffffff;
-      --muted: #6b7280;
+      --muted: #64748b;
       --success: #10b981;
       --warning: #f59e0b;
+      --text-primary: #0f172a;
+      --text-secondary: #475569;
+      --border: #e2e8f0;
     }
 
     * {
@@ -21,7 +24,7 @@
     }
 
     body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Arial, sans-serif;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Inter', sans-serif;
       background: var(--bg);
       min-height: 100vh;
     }
@@ -29,14 +32,14 @@
     .container {
       max-width: 1200px;
       margin: 0 auto;
-      padding: 30px 20px;
+      padding: 40px 20px;
     }
 
     .header {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 30px;
+      margin-bottom: 32px;
       flex-wrap: wrap;
       gap: 15px;
     }
@@ -49,17 +52,18 @@
 
     .back-btn {
       background: white;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       padding: 10px 15px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       transition: all 0.2s;
       text-decoration: none;
-      color: #374151;
+      color: var(--text-primary);
       display: inline-flex;
       align-items: center;
       gap: 5px;
+      font-weight: 500;
     }
 
     .back-btn:hover {
@@ -68,21 +72,22 @@
     }
 
     h1 {
-      font-size: 2rem;
-      color: #1f2937;
+      font-size: 1.5rem;
+      color: var(--text-primary);
       display: flex;
       align-items: center;
       gap: 10px;
+      font-weight: 600;
     }
 
     .add-btn {
       background: linear-gradient(135deg, var(--accent), var(--accent-hover));
       color: white;
       border: none;
-      padding: 12px 24px;
+      padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 0.875rem;
       font-weight: 600;
       transition: transform 0.2s, box-shadow 0.2s;
       display: flex;
@@ -92,15 +97,16 @@
 
     .add-btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(139, 92, 246, 0.3);
+      box-shadow: 0 4px 12px rgba(99, 102, 241, 0.3);
     }
 
     .filter-section {
       background: white;
       padding: 20px;
       border-radius: 12px;
-      margin-bottom: 25px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      margin-bottom: 24px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       display: flex;
       gap: 15px;
       flex-wrap: wrap;
@@ -114,32 +120,34 @@
     }
 
     .filter-group label {
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       color: var(--muted);
       font-weight: 500;
     }
 
     .filter-select {
       padding: 8px 12px;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       border-radius: 6px;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       cursor: pointer;
       background: white;
+      color: var(--text-primary);
     }
 
     .stats-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 20px;
-      margin-bottom: 30px;
+      margin-bottom: 32px;
     }
 
     .stat-card {
       background: white;
       padding: 20px;
       border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       border-left: 4px solid var(--accent);
     }
 
@@ -152,7 +160,7 @@
 
     .stat-label {
       color: var(--muted);
-      font-size: 0.9rem;
+      font-size: 0.875rem;
     }
 
     .goals-grid {
@@ -164,7 +172,8 @@
       background: white;
       border-radius: 12px;
       padding: 24px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.06);
+      border: 1px solid var(--border);
       border-left: 4px solid var(--accent);
       transition: transform 0.2s, box-shadow 0.2s;
       position: relative;
@@ -189,9 +198,9 @@
     }
 
     .goal-title {
-      font-size: 1.3rem;
+      font-size: 1.125rem;
       font-weight: 600;
-      color: #1f2937;
+      color: var(--text-primary);
       flex: 1;
       display: flex;
       align-items: center;
@@ -218,11 +227,11 @@
 
     .icon-btn {
       background: transparent;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       padding: 6px 10px;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       transition: all 0.2s;
     }
 
@@ -242,7 +251,7 @@
       flex-wrap: wrap;
       gap: 15px;
       margin-bottom: 15px;
-      font-size: 0.9rem;
+      font-size: 0.875rem;
     }
 
     .meta-item {
@@ -255,7 +264,7 @@
     .goal-type-badge {
       padding: 4px 10px;
       border-radius: 12px;
-      font-size: 0.85rem;
+      font-size: 0.813rem;
       font-weight: 600;
     }
 
@@ -290,13 +299,14 @@
     }
 
     .goal-description {
-      color: #4b5563;
+      color: var(--text-secondary);
       line-height: 1.6;
       margin-bottom: 15px;
       word-wrap: break-word;
       overflow-wrap: break-word;
       word-break: break-all;
       white-space: pre-wrap;
+      font-size: 0.875rem;
     }
 
     .progress-section {
@@ -311,29 +321,29 @@
     }
 
     .progress-label {
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       color: var(--muted);
       font-weight: 500;
     }
 
     .progress-value {
-      font-size: 0.9rem;
+      font-size: 0.875rem;
       font-weight: 600;
       color: var(--accent);
     }
 
     .history-btn {
       background: #f3f4f6;
-      border: 1px solid #e5e7eb;
+      border: 1px solid var(--border);
       padding: 6px 12px;
       border-radius: 6px;
       cursor: pointer;
-      font-size: 0.85rem;
+      font-size: 0.813rem;
       transition: all 0.2s;
       display: inline-flex;
       align-items: center;
       gap: 5px;
-      color: #374151;
+      color: var(--text-primary);
       font-weight: 500;
     }
 
@@ -389,15 +399,15 @@
     }
 
     .stage-description-label {
-      font-size: 0.85rem;
+      font-size: 0.813rem;
       font-weight: 600;
       color: var(--muted);
       margin-bottom: 6px;
     }
 
     .stage-description-text {
-      font-size: 0.9rem;
-      color: #4b5563;
+      font-size: 0.875rem;
+      color: var(--text-secondary);
       line-height: 1.5;
       word-wrap: break-word;
       overflow-wrap: break-word;
@@ -412,8 +422,7 @@
       padding: 6px 12px;
       background: #f3f4f6;
       border-radius: 8px;
-      font-size: 0.9rem;
-      margin-top: 10px;
+      font-size: 0.875rem;
     }
 
     .modal {
@@ -451,8 +460,9 @@
     }
 
     .modal-header h2 {
-      font-size: 1.5rem;
-      color: #1f2937;
+      font-size: 1.25rem;
+      color: var(--text-primary);
+      font-weight: 600;
     }
 
     .close-btn {
@@ -474,7 +484,8 @@
       display: block;
       margin-bottom: 8px;
       font-weight: 600;
-      color: #374151;
+      color: var(--text-primary);
+      font-size: 0.875rem;
     }
 
     .form-group input,
@@ -482,10 +493,11 @@
     .form-group select {
       width: 100%;
       padding: 10px 12px;
-      border: 1px solid #d1d5db;
+      border: 1px solid var(--border);
       border-radius: 8px;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-family: inherit;
+      color: var(--text-primary);
     }
 
     .form-group textarea {
@@ -545,7 +557,7 @@
     }
 
     .progress-display {
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: 600;
       color: var(--accent);
       min-width: 80px;
@@ -565,11 +577,13 @@
 
     .btn-cancel {
       background: white;
-      border: 1px solid #d1d5db;
+      border: 1px solid var(--border);
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
+      font-weight: 500;
+      color: var(--text-primary);
     }
 
     .btn-save {
@@ -579,7 +593,7 @@
       padding: 10px 20px;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 0.95rem;
+      font-size: 0.875rem;
       font-weight: 600;
     }
 
@@ -595,9 +609,14 @@
     }
 
     .empty-state h3 {
-      font-size: 1.3rem;
+      font-size: 1.125rem;
       margin-bottom: 10px;
-      color: #4b5563;
+      color: var(--text-secondary);
+      font-weight: 600;
+    }
+
+    .empty-state p {
+      font-size: 0.875rem;
     }
 
     /* Stage History Modal Styles */
@@ -614,7 +633,7 @@
       position: relative;
       padding-left: 40px;
       padding-bottom: 30px;
-      border-left: 2px solid #e5e7eb;
+      border-left: 2px solid var(--border);
     }
 
     .history-item:last-child {
@@ -641,9 +660,9 @@
     }
 
     .history-stage-title {
-      font-size: 1.1rem;
+      font-size: 1rem;
       font-weight: 600;
-      color: #1f2937;
+      color: var(--text-primary);
       margin-bottom: 5px;
       display: flex;
       align-items: center;
@@ -651,7 +670,7 @@
     }
 
     .history-date {
-      font-size: 0.85rem;
+      font-size: 0.813rem;
       color: var(--muted);
       margin-bottom: 10px;
       display: flex;
@@ -660,8 +679,8 @@
     }
 
     .history-description {
-      font-size: 0.95rem;
-      color: #4b5563;
+      font-size: 0.875rem;
+      color: var(--text-secondary);
       line-height: 1.6;
       background: #f9fafb;
       padding: 12px;
@@ -675,6 +694,7 @@
       text-align: center;
       padding: 40px 20px;
       color: var(--muted);
+      font-size: 0.875rem;
     }
 
     @media (max-width: 768px) {
@@ -1004,7 +1024,7 @@
           historyContent.innerHTML = `
             <div class="no-history">
               <p>No stage history available yet.</p>
-              <p style="margin-top: 10px; font-size: 0.9rem;">History will be recorded as you progress through stages.</p>
+              <p style="margin-top: 10px; font-size: 0.875rem;">History will be recorded as you progress through stages.</p>
             </div>
           `;
         } else {
